# WeatherReporter

./: README.md
client/: CMakeLists.txt  WeatherReporter.sln  build-debug.bat  build-release.bat
client/WeatherReporter/: WeatherReporter.cpp  WeatherReporter.hpp  WeatherReporter.vcxproj  WeatherReporter.vcxproj.filters  exports.def  httplib.h  weather_reporter_core.cpp  weather_reporter_core.h
client/WeatherReporter/ashita/: ashita_plugin.cpp  ashita_plugin.h
client/WeatherReporter/windower/: exports.def  windower_plugin.cpp
server/: main.py  requirements.txt
